--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			<ul>
 				<li><a href="#Home">Home</a></li>
 				<li><a href="#about">About</a></li>
-				<li><a href="#skills">Skill</a></li>
+				<li><a href="#skill">Skill</a></li>
 				<li><a href="#portfolio">Portfolio</a></li>
 				<li><a href="#contact">Contact</a></li>
 			</ul>
@@ -29,7 +29,7 @@
 				<ul>
 					<li><a href="#Home">Home</a></li>
 					<li><a href="#about">About</a></li>
-					<li><a href="#skills">Skill</a></li>
+					<li><a href="#skill">Skill</a></li>
 					<li><a href="#portfolio">Portfolio</a></li>
 					<li><a href="#contact">Contact</a></li>
 				</ul>
